# IoTEC

./: API整理.md  API文档(完整).docx  README.md  ros2-picture-load.yaml
data_loader/: Dockerfile
data_loader/code/sample_data/: nemo_sample_train.json  nemo_sample_val.json
data_loader/code/src/cpp_service/: CMakeLists.txt  package.xml
data_loader/code/src/cpp_service/src/: client_cpp.cpp
data_loader/code/src/picture_upload/: CMakeLists.txt  package.xml
data_loader/code/src/py_server/py_server/: server_py.py
detection/: Dockerfile
detection/code/src/cpp_service/src/: client_cpp.cpp  server_cpp.cpp
detection/code/src/nemo/: package.xml  setup.cfg  setup.py
detection/code/src/nemo/nemo/: test.py
detection/code/src/nemo/nemo/datasets/: coco.py  coco_eval.py  coco_panoptic.py  face.py  panoptic_eval.py  smoke.py
detection/code/src/nemo/nemo/models/: detr.py  segmentation.py
detection/code/src/picture_upload/srv/: ImageCv.srv
detection/code/src/py_server/: package.xml  setup.cfg  setup.py
detection/code/src/py_server/py_server/: client_py.py
examples/: .gitignore  README.md
examples/wildfire-smoke-detection/: README.md
